--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Basecamp HTML</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <script src="main.js"></script>
+</head>
+
+<body>
+
+    <header>
+       <span id="Name">Company</span>
+        <ul id="Navigation">
+            <li>Contact</li>
+            <li>About</li>
+            <li>Home</li>
+        </ul>
+    </header>
+
+    <div class="banner">
+        <p>The more you know</p>
+    </div>
+
+    <div class="content">
+        <div>
+            <span class="green"></span>
+            <span class="green"></span>
+            <span class="green"></span>
+        </div>
+
+        <div>
+            <span class="yellow"></span>
+            <span class="yellow"></span>
+        </div>
+        <div>
+            <span class="paragraph">
+                Mr. and Mrs. Dursley, of number four, Privet Drive, were proud to say that they were perfectly normal, thank you very much. They were the last people you'd expect to be involved in anything strange or mysterious, because they just didn't hold with such nonsense. 
+            </span>
+            <img alt = 'bear' src="kodiak-brown-bear.jpeg">
+        </div>
+            
+    </div>
+
+    <div class="footer">
+
+    </div>
+
+</body>
+</html>
