--- a/index.html
+++ b/index.html
@@ -4,47 +4,48 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Basecamp HTML</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <script src="main.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Oswald:500|Source+Sans+Pro:300,400" rel="stylesheet">
 </head>
 
 <body>
 
-    <header>
-       <span id="Name">Company</span>
-        <ul id="Navigation">
-            <li>Contact</li>
-            <li>About</li>
+    <div id="navbar">
+        <span id="name">Company</span>
+        <ul>
             <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
         </ul>
-    </header>
-
-    <div class="banner">
-        <p>The more you know</p>
     </div>
 
-    <div class="content">
-        <div>
-            <span class="green"></span>
-            <span class="green"></span>
-            <span class="green"></span>
-        </div>
+    <div id="banner">
+        the more you know
+    </div>
 
-        <div>
+    <div>
+        <div class="content">
+            <span class="blue"></span>
+            <span class="blue"></span>
+            <span class="blue"></span>
+        </div>
+        <div class="content">
             <span class="yellow"></span>
             <span class="yellow"></span>
         </div>
-        <div>
-            <span class="paragraph">
-                Mr. and Mrs. Dursley, of number four, Privet Drive, were proud to say that they were perfectly normal, thank you very much. They were the last people you'd expect to be involved in anything strange or mysterious, because they just didn't hold with such nonsense. 
-            </span>
+        <div class="content">
+            <p>
+                    Encounters between people and Kodiak bears have been very frequent since ancient times. Today, these encounters have become more common as a result of the increase in the human population in the region. Such encounters have included the hunting of bears by humans for their fur or meat, and, less commonly, attacks by bears upon humans. 
+            </p>
+
             <img alt = 'bear' src="kodiak-brown-bear.jpeg">
         </div>
-            
+
+
     </div>
 
-    <div class="footer">
+    <div id="footer">
 
     </div>
 
